# nodular-2

./: Cargo.toml  README.md  shell.nix
src/: app.rs  automaton.rs  clipboard.rs  graph.rs  main.rs  vec2.rs
