[package]
name = "nodular-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raylib = "5.5.1"
serde = { version = "1.0", features = ["derive"] }
rfd = "0.11.4"
serde_json = "1.0"
midir = "0.9.1"
midi-msg = "0.4.0"
